fix header image width on tablet

--- a/src/styles/blocks/hero.scss
+++ b/src/styles/blocks/hero.scss
@@ -13,11 +13,15 @@
     justify-content: flex-start;
     padding-left: 80px;
     padding-top: 15px;
-    width: 50%;
+    width: 45%;
     right: 0;
     top: 0;
     bottom: 0;
     position: absolute;
     height: 100%;
+  }
+
+  @include on-desktop {
+    width: 50%;
   }
 }
